Add updated setup.sh env
Issue-ID:PORTAL-53
Signed-off-by: kishore <kk707x@att.com>
Change-Id: I4af5150fcbc455f0ad180f614584a4bcd75ea391

--- a/test/csit/plans/portal/testsuite/.env
+++ b/test/csit/plans/portal/testsuite/.env
@@ -11,7 +11,8 @@ WEBAPPS_DIR=/opt/apache-tomcat-8.0.37/webapps
 EP_IMG_NAME=portal-apps
 DB_IMG_NAME=portal-db
 WMS_IMG_NAME=portal-wms
+
 # Tag all images with this
 PORTAL_TAG=1.1.0
-
+DOCKER_IMAGE_VERSION=1.1-STAGING-latest
 NEXUS_REPO=nexus3.onap.org:10003
