--- a/test/csit/plans/portal/testsuite/.env
+++ b/test/csit/plans/portal/testsuite/.env
@@ -2,7 +2,10 @@
 # used by docker-compose AND by other shell scripts
 
 # Host directory with config files
-PROJECT_DIR=/PROJECT/OpenSource/UbuntuEP
+
+LOGS_DIR=./logs
+PROPS_DIR=./properties
+
 
 # Directory within containers
 WEBAPPS_DIR=/opt/apache-tomcat-8.0.37/webapps
@@ -11,7 +14,9 @@ WEBAPPS_DIR=/opt/apache-tomcat-8.0.37/webapps
 EP_IMG_NAME=portal-apps
 DB_IMG_NAME=portal-db
 WMS_IMG_NAME=portal-wms
-# Tag all images with this
-PORTAL_TAG=1.1.0
 
+# Tag all images with this
+PORTAL_TAG=1.3.0
+DOCKER_IMAGE_VERSION=1.3-STAGING-latest
+CLI_IMAGE_VERSION=1.1-STAGING-latest
 NEXUS_REPO=nexus3.onap.org:10003
