--- a/test/csit/plans/portal/testsuite/.env
+++ b/test/csit/plans/portal/testsuite/.env
@@ -2,16 +2,23 @@
 # used by docker-compose AND by other shell scripts
 
 # Host directory with config files
-PROJECT_DIR=/PROJECT/OpenSource/UbuntuEP
+
+LOGS_DIR=./logs
+PROPS_DIR=./properties
+
 
 # Directory within containers
 WEBAPPS_DIR=/opt/apache-tomcat-8.0.37/webapps
 
 # Following are ALSO used in demo/boot/portal_vm_init.sh
-EP_IMG_NAME=portal-apps
-DB_IMG_NAME=portal-db
-WMS_IMG_NAME=portal-wms
-# Tag all images with this
-PORTAL_TAG=1.1.0
+EP_IMG_NAME=onap/portal-apps
+DB_IMG_NAME=onap/portal-db
+WMS_IMG_NAME=onap/portal-wms
+# Deployed with portal; built elsewhere
+CLI_IMG_NAME=onap/cli
 
+# Tag all images with this
+PORTAL_TAG=1.3.0
+DOCKER_IMAGE_VERSION=1.3-STAGING-latest
+CLI_DOCKER_VERSION=1.1-STAGING-latest
 NEXUS_REPO=nexus3.onap.org:10003
