Add updated test1.robot file
Issue-ID:PORTAL-53
Change-Id: Id5d1315fefb43ce9d33dfa19e0388668c32ee95c
Signed-off-by: kishore <kk707x@att.com>

--- a/test/csit/plans/portal/testsuite/.env
+++ b/test/csit/plans/portal/testsuite/.env
@@ -20,3 +20,14 @@ PORTAL_TAG=1.3.0
 DOCKER_IMAGE_VERSION=1.3-STAGING-latest
 CLI_DOCKER_VERSION=1.1-STAGING-latest
 NEXUS_DOCKER_REPO=nexus3.onap.org:10003
+
+
+# Optional settings with no defaults.
+EXTRA_HOST_IP=""
+EXTRA_HOST_NAME=""
+# Export shell environment variables on hosts with no DNS;
+# a line is added to docker container's /etc/hosts.
+# For example:
+#EXTRA_HOST_IP="-i ${HOST_IP}"
+#EXTRA_HOST_NAME="-n portal.api.simpledemo.openecomp.org"
+
