Add updated setup.sh files
Issue-ID:PORTAL-78
Change-Id: Ie7802727f0c166ab7bfabfb86c8e8dfded1103e5
Signed-off-by: kishore <kk707x@att.com>

--- a/test/csit/plans/portal-sdk/testsuite/docker-compose.yml
+++ b/test/csit/plans/portal-sdk/testsuite/docker-compose.yml
@@ -91,5 +91,8 @@ services:
       - portal-db:3306
       - --
       - /start-apps-cmd.sh
+      # see comments in .env file
+      - $EXTRA_HOST_IP
+      - $EXTRA_HOST_NAME
     logging:
       driver: json-file
