--- a/bootstrap/vagrant-onap/Vagrantfile
+++ b/bootstrap/vagrant-onap/Vagrantfile
@@ -290,6 +290,7 @@ Vagrant.configure("2") do |config|
       config.proxy.http     = ENV['http_proxy']
       config.proxy.https    = ENV['https_proxy']
       config.proxy.no_proxy = ENV['no_proxy']
+      configuration['socks_proxy'] = ENV['socks_proxy']
     end
 
     if Vagrant.has_plugin?('vagrant-vbguest')
