--- a/version-manifest/pom.xml
+++ b/version-manifest/pom.xml
@@ -6,7 +6,9 @@
     <artifactId>oparent</artifactId>
     <version>0.1.1</version>
   </parent>
+  <groupId>org.onap.integration</groupId>
   <artifactId>version-manifest</artifactId>
+  <version>0.1.0-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
   <name>ONAP Version Manifest and Maven Plugin</name>
   <url>https://www.onap.org</url>
