Add missing vnfsdk in the Vagrant file
This patch adds missing VNFSDK settings in the Vagrant file
and fixes a minor cloning issue in multicloud.

Issue-Id: INT-290

Change-Id: I9406f252708cf708ea1e92d91d1965b889f3ded0
Signed-off-by: Shashank Kumar Shankar <shashank.kumar.shankar@intel.com>

--- a/bootstrap/vagrant-onap/Vagrantfile
+++ b/bootstrap/vagrant-onap/Vagrantfile
@@ -212,6 +212,16 @@ nodes = [
     :args   => ['vid'],
   },
   {
+        :name   => "vnfsdk",
+        :ips    => ['10.252.0.16', "192.168.50.16"],
+        :macs   => [],
+        :cpus   => 2,
+        :cpu    => "50",
+        :ram    => 4 * 1024,
+        :groups => ["individual"],
+        :args   => ['vnfsdk'],
+  },
+  {
     :name   => "vvp",
     :ips    => ['10.252.0.17', "192.168.50.17"],
     :macs   => [],
@@ -220,7 +230,7 @@ nodes = [
     :ram    => 4 * 1024,
     :groups => ["individual"],
     :args   => ['vvp'],
-  },
+  }
 ]
 
 run_path   = 'vagrant_utils/postinstall.sh'
