--- a/bootstrap/vagrant-onap/Vagrantfile
+++ b/bootstrap/vagrant-onap/Vagrantfile
@@ -211,6 +211,16 @@ nodes = [
     :groups => ["individual"],
     :args   => ['vid'],
   },
+  {
+      :name   => "vnfsdk",
+      :ips    => ['10.252.0.16', "192.168.50.16"],
+      :macs   => [],
+      :cpus   => 2,
+      :cpu    => "50",
+      :ram    => 4 * 1024,
+      :groups => ["individual"],
+      :args   => ['vnfsdk'],
+   },
 ]
 
 run_path   = 'vagrant_utils/postinstall.sh'
