--- a/bootstrap/vagrant-onap/tox.ini
+++ b/bootstrap/vagrant-onap/tox.ini
@@ -12,11 +12,13 @@ install_command = pip install {opts} {packages}
 deps =
    {env:BASHATE_INSTALL_PATH:bashate}
 whitelist_externals = bash
-commands = bash -c "find {toxinidir}/{tests,lib,tools} \
-         -not \( -type d -path *files* -prune \)       \
-         -not \( -type f -name .*.swp* -prune \)       \
-         -not \( -type f -name *.ps1 -prune \)         \
-         -type f                                       \
+commands = bash -c "find {toxinidir}/{tests,lib,tools}       \
+         -not \( -type d -path *files* -prune \)             \
+         -not \( -type f -name .*.swp* -prune \)             \
+         -not \( -type f -name *.ps1 -prune \)               \
+         -not \( -type f -name installed-software* -prune \) \
+         -not \( -type f -name *projects.txt -prune \)       \
+         -type f                                             \
 # E005 file does not begin with #! or have a .sh prefix
 # E006 check for lines longer than 79 columns
 # E042 local declaration hides errors
