--- a/test/ete/labs/windriver/onap-openstack.env
+++ b/test/ete/labs/windriver/onap-openstack.env
@@ -73,6 +73,11 @@ parameters:
   aai2_ip_addr: 10.0.1.2
   appc_ip_addr: 10.0.2.1
   dcae_ip_addr: 10.0.4.1
+  dcae_coll_ip_addr: 10.0.4.102
+  dcae_db_ip_addr: 10.0.4.101
+  dcae_hdp1_ip_addr: 10.0.4.103
+  dcae_hdp2_ip_addr: 10.0.4.104
+  dcae_hdp3_ip_addr: 10.0.4.105
   dns_ip_addr: 10.0.100.1
   so_ip_addr: 10.0.5.1
   mr_ip_addr: 10.0.11.1
@@ -85,13 +90,47 @@ parameters:
   clamp_ip_addr: 10.0.12.1
   openo_ip_addr: 10.0.14.1
 
+#  dcae_coll_float_ip: PUT DCAE COLLECTOR FLOATING IP HERE
+#  dcae_db_float_ip: PUT DCAE DATABASE FLOATING IP HERE
+#  dcae_hdp1_float_ip: PUT DCAE HADOOP VM1 FLOATING IP HERE
+#  dcae_hdp2_float_ip: PUT DCAE HADOOP VM2 FLOATING IP HERE
+#  dcae_hdp3_float_ip: PUT DCAE HADOOP VM3 FLOATING IP HERE
+
   ###########################
   #                         #
   # Parameters used by DCAE #
   #                         #
   ###########################
 
+#  dcae_base_environment: 1-NIC-FLOATING-IPS
+
   dcae_zone: ZONE
+
+#  dcae_state: STATE
+
+#  nexus_repo_root: https://nexus.onap.org
+
+#  nexus_url_snapshot: https://nexus.onap.org/content/repositories/snapshots
+
+#  gitlab_branch: master
+
+#  dcae_code_version: 1.1.0
+
+  dcaeos_cloud_env: PUT DACE TARGET DEPLOYMENT STACK'S FLAVOR (e.g. OpenStack) HERE
+  dcaeos_keystone_url: PUT DACE TARGET DEPLOYMENT STACK'S KEYSTONE URL HERE
+  dcaeos_openstack_region: PUT DACE TARGET DEPLOYMENT STACK'S REGION HERE
+  dcaeos_openstack_tenant_id: PUT DACE TARGET DEPLOYMENT STACK'S TENANT ID HERE
+  dcaeos_openstack_username: PUT DACE TARGET DEPLOYMENT STACK'S USERNAME HERE
+  dcaeos_openstack_password: PUT DACE TARGET DEPLOYMENT STACK'S PASSWORD HERE
+  dcaeos_dcae_key_name: PUT DACE TARGET DEPLOYMENT STACK'S UPLOADED KEY-PAIR NAME HERE
+  dcaeos_dcae_pub_key: PUT DACE TARGET DEPLOYMENT STACK'S PUBLIC KEY HERE
+  dcaeos_private_key: PUT DACE TARGET DEPLOYMENT STACK'S PRIVATE KEY HERE
+  dcaeos_openstack_private_network_name: PUT DACE TARGET DEPLOYMENT STACK'S INTERNAL NETWOKR ID HERE
+  dcaeos_public_net_id: PUT DACE TARGET DEPLOYMENT STACK'S PUBLIC NETWORK ID HERE
+  dcaeos_ubuntu_1604_image: PUT DACE TARGET DEPLOYMENT STACK'S UBUNTU1604 IMAGE ID (TO BE USED BY DCAE VMS) HERE
+  dcaeos_centos_7_image: PUT DACE TARGET DEPLOYMENT STACK'S CENTOS7 IMAGE ID (TO BE USED BY DCAE VMS) HERE
+  dcaeos_security_group: PUT DACE TARGET DEPLOYMENT STACK'S SECURITY GROUP ID (TO BE USED BY DCAE VMS) HERE
+  dcaeos_flavor_id: PUT DACE TARGET DEPLOYMENT STACK'S VM FLAVOR ID (TO BE USED BY DCAE VMS) HERE
 
 
   ################################
