--- a/bootstrap/vagrant-onap/Vagrantfile
+++ b/bootstrap/vagrant-onap/Vagrantfile
@@ -211,6 +211,16 @@ nodes = [
     :groups => ["individual"],
     :args   => ['vid'],
   },
+  {
+    :name   => "vvp",
+    :ips    => ['10.252.0.17', "192.168.50.17"],
+    :macs   => [],
+    :cpus   => 2,
+    :cpu    => "50",
+    :ram    => 4 * 1024,
+    :groups => ["individual"],
+    :args   => ['vvp'],
+  },
 ]
 
 run_path   = 'vagrant_utils/postinstall.sh'
