--- a/test/ete/labs/windriver/onap-openstack-template.env
+++ b/test/ete/labs/windriver/onap-openstack-template.env
@@ -124,8 +124,8 @@ parameters:
   dnsaas_region: RegionOne
   dnsaas_keystone_url: http://10.12.25.5:5000/v3
   dnsaas_tenant_name: ${OS_PROJECT_NAME}
-  dnsaas_username: demo
-  dnsaas_password: onapdemo
+  dnsaas_username: ${OS_USERNAME}
+  dnsaas_password: ${OS_PASSWORD}
   dcae_keystone_url: "http://10.0.14.1/api/multicloud-titanium_cloud/v0/pod25_RegionOne/identity/v2.0"
   dcae_centos_7_image: CentOS-7
   dcae_security_group: default
