Add debug support
This change allows to control the level of verbosity for the
ONAP on vagrant execution. The new debug configuration value
enables verbosity setting its value to *True*

Change-Id: I29a3694ea3182a02cb585af5ae8ada1f8a415c8c
Signed-off-by: Victor Morales <victor.morales@intel.com>
Issue-Id: INT-323

--- a/bootstrap/vagrant-onap/Vagrantfile
+++ b/bootstrap/vagrant-onap/Vagrantfile
@@ -23,6 +23,7 @@ configuration = {
   'openstack_password'  => '',
   'odl_version'         => '0.5.3-Boron-SR3',
   # Parameters for enabling features
+  'debug'               => 'True',
   'build_image'         => 'True',
   'clone_repo'          => 'True',
   'compile_repo'        => 'False',
