Update the haproxy to use latest aai certificate
Issue-ID: AAI-44
Change-Id: If3ca71b93c731cdf5c02f3ddd37438fb0d328e49
Signed-off-by: Venkata Harish K Kajur <vk250x@att.com>

--- a/test/csit/plans/aai/traversal/docker-compose.yml
+++ b/test/csit/plans/aai/traversal/docker-compose.yml
@@ -35,7 +35,7 @@ services:
         max-size: "30m"
         max-file: "5"
   aai.api.simpledemo.openecomp.org:
-    image: ${AAI_HAPROXY_IMAGE}
+    image: ${AAI_HAPROXY_IMAGE}:${HAPROXY_VERSION}
     hostname: aai.api.simpledemo.openecomp.org
     ports:
       - 8443:8443
