Sort the manifests by artifact names
Change-Id: Ic71b29c6bf0fe0ecaaf1055ed6bfb3c04b953f88
Issue-ID: INT-124
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>

--- a/version-manifest/pom.xml
+++ b/version-manifest/pom.xml
@@ -87,6 +87,42 @@
           <generateGitPropertiesFile>true</generateGitPropertiesFile>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>1.6.0</version>
+        <configuration>
+          <executable>sort</executable>
+        </configuration>
+        <executions>
+          <execution>
+            <id>check-docker-manifest-sorted</id>
+            <phase>validate</phase>
+            <goals>
+              <goal>exec</goal>
+            </goals>
+            <configuration>
+              <arguments>
+                <argument>-c</argument>
+                <argument>${project.basedir}/src/main/resources/docker-manifest.csv</argument>
+              </arguments>
+            </configuration>
+          </execution>
+          <execution>
+            <id>check-java-manifest-sorted</id>
+            <phase>validate</phase>
+            <goals>
+              <goal>exec</goal>
+            </goals>
+            <configuration>
+              <arguments>
+                <argument>-c</argument>
+                <argument>${project.basedir}/src/main/resources/java-manifest.csv</argument>
+              </arguments>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 </project>
