--- a/test/ete/labs/windriver/onap-openstack-template.env
+++ b/test/ete/labs/windriver/onap-openstack-template.env
@@ -197,7 +197,7 @@ m3bZLBvlAVvCajosd/qeX0FkPGZlgk1dGZ8/7SyK7NITqAfgMMRS\n
   uui_docker: latest
   esr_docker: latest
   dgbuilder_docker: 0.1-STAGING-latest
-  cli_docker: 1.1-STAGING-latest
+  cli_docker: v1.1.0
 
   #####################
   #                   #
