--- a/bootstrap/jenkins/vagrant/Vagrantfile
+++ b/bootstrap/jenkins/vagrant/Vagrantfile
@@ -49,6 +49,7 @@ Vagrant.configure(2) do |config|
   #
   #   # Customize the amount of memory on the VM:
     vb.memory = "8192"
+    vb.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
   end
   #
   # View the documentation for the provider you are using for more
