--- a/test/ete/labs/windriver/onap-openstack-template.env
+++ b/test/ete/labs/windriver/onap-openstack-template.env
@@ -147,46 +147,46 @@ y7RoiFqJtkdFQykzJemA+xOXvHLgKi/MXFsU90PCD0VJKLj8vwpX78Y=\n
   policy_branch: master
   portal_branch: release-1.3.0
   robot_branch: master
-  sdc_branch: release-1.1.0
-  sdnc_branch: release-1.1.0
+  sdc_branch: master
+  sdnc_branch: master
   vid_branch: master
   clamp_branch: master
   vnfsdk_branch: master
 
   aai_docker: v1.1.0
   aai_sparky_docker: v1.0.0
-  appc_docker: 1.1-STAGING-latest
+  appc_docker: v1.2.0
   so_docker: v1.1.0
-  dcae_docker: 1.1-latest
-  policy_docker: v1.1.0
+  dcae_docker: v1.1.0
+  policy_docker: v1.1.1
   portal_docker: v1.3.0
   robot_docker: 1.1-STAGING-latest
-  sdc_docker: v1.0.0
+  sdc_docker: 1.1-STAGING-latest
   sdnc_docker: 1.2-STAGING-latest
   vid_docker: v1.1.0
   clamp_docker: v1.1.0
-  msb_docker: v1.0.0
+  msb_docker: 1.0.0
   mvim_docker: latest
   uui_docker: latest
   esr_docker: v1.0.0
-  dgbuilder_docker: 0.1-STAGING-latest
+  dgbuilder_docker: v0.1.0
   cli_docker: v1.1.0
 
-  vfc_nokia_docker: v1.0.0
-  vfc_ztevmanagerdriver_docker: v1.0.1
-  vfc_ztesdncdriver_docker: v1.0.1
-  vfc_vnfres_docker: v1.0.1
-  vfc_vnfmgr_docker: v1.0.1
-  vfc_vnflcm_docker: v1.0.1
-  vfc_resmanagement_docker: v1.0.0
-  vfc_nslcm_docker: v1.0.1
+  vfc_nokia_docker: 1.0.2-STAGING-latest
+  vfc_ztevmanagerdriver_docker: 1.0.2-STAGING-latest
+  vfc_ztesdncdriver_docker: 1.0.0-STAGING-latest
+  vfc_vnfres_docker: 1.0.1-STAGING-latest
+  vfc_vnfmgr_docker: 1.0.1-STAGING-latest
+  vfc_vnflcm_docker: 1.0.1-STAGING-latest
+  vfc_resmanagement_docker: 1.0.0-STAGING-latest
+  vfc_nslcm_docker: 1.0.2-STAGING-latest
   vfc_huawei_docker: v1.0.0
-  vfc_jujudriver_docker: v1.0.0
-  vfc_gvnfmdriver_docker: v1.0.1
-  vfc_emsdriver_docker: v1.0.1
-  vfc_catalog_docker: v1.0.1
-  vfc_wfengine_mgrservice_docker: v1.0.0
-  vfc_wfengine_activiti_docker: v1.0.0
+  vfc_jujudriver_docker: 1.0.0-STAGING-latest
+  vfc_gvnfmdriver_docker: 1.0.1-STAGING-latest
+  vfc_emsdriver_docker: 1.0.1-STAGING-latest
+  vfc_catalog_docker: 1.0.2-STAGING-latest
+  vfc_wfengine_mgrservice_docker: 1.0.0-STAGING-latest
+  vfc_wfengine_activiti_docker: 1.0.0-STAGING-latest
 
   #####################
   #                   #
