--- a/bootstrap/vagrant-onap/Vagrantfile
+++ b/bootstrap/vagrant-onap/Vagrantfile
@@ -34,7 +34,7 @@ configuration = {
 
 box = {
   :virtualbox => 'ubuntu/trusty64',
-  :libvirt => 'sputnik13/trusty64',
+  :libvirt => 'elastic/ubuntu-14.04-x86_64',
   :openstack => nil
 }
 
@@ -357,11 +357,31 @@ Vagrant.configure("2") do |config|
           vbox.customize ['modifyvm', :id, "--cpuexecutioncap", node[:cpu]]
           vbox.customize ['modifyvm', :id, "--cpus", node[:cpus]]
           vbox.customize ["modifyvm", :id, "--memory", node[:ram]]
+
+          # Set Network
+          nodeconfig.vm.network :private_network,
+            :adapter => 2,
+            :name => net_interface,
+            :ip  => node[:ips][0]
+
+          nodeconfig.vm.network :private_network,
+            :adapter => 3,
+            :ip  => node[:ips][1],
+            :type => :static
         end
 
         nodeconfig.vm.provider "libvirt" do |lbox|
           lbox.memory = node[:ram]
           lbox.nested = true
+          lbox.cpu_mode = 'host-passthrough'
+
+          # Set Network
+          nodeconfig.vm.network :private_network,
+            :ip  => node[:ips][0]
+
+          nodeconfig.vm.network :private_network,
+            :ip  => node[:ips][1],
+            :type => :static
         end
 
         nodeconfig.vm.provider :openstack do |obox|
@@ -383,10 +403,13 @@ Vagrant.configure("2") do |config|
         end
 
         # Set Box type
-        nodeconfig.vm.box = box[provider]
         if "openstack" == node[:name]
-          nodeconfig.vm.box = "ubuntu/xenial64"
+          box = {
+            :virtualbox => 'ubuntu/xenial64',
+            :libvirt => 'elastic/ubuntu-16.04-x86_64'
+          }
         end
+        nodeconfig.vm.box = box[provider]
 
         # Set Node name
         nodeconfig.vm.hostname = node[:name]
@@ -398,17 +421,6 @@ Vagrant.configure("2") do |config|
         if !is_windows
           nodeconfig.vm.synced_folder '~/.m2', '/root/.m2/', create: true
         end
-
-        # Set Network
-        nodeconfig.vm.network :private_network,
-            :adapter => 2,
-            :name => net_interface,
-            :ip  => node[:ips][0]
-
-        nodeconfig.vm.network :private_network,
-            :adapter => 3,
-            :ip  => node[:ips][1],
-            :type => :static
 
         # Specific settings:
 
