Change the openecomp references to onap
to fix the docker not starting up properly
since there were changes done in aai repos

Issue-ID: AAI-479
Change-Id: I7bdd9f11c231429e21ef623620e75b43956c7d19
Signed-off-by: Venkata Harish K Kajur <vk250x@att.com>

--- a/test/csit/plans/aai/resources/docker-compose.yml
+++ b/test/csit/plans/aai/resources/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '2'
 services:
-  aai-resources.api.simpledemo.openecomp.org:
-    image: ${DOCKER_REGISTRY}/openecomp/aai-resources
-    hostname: aai-resources.api.simpledemo.openecomp.org
+  aai-resources.api.simpledemo.onap.org:
+    image: ${DOCKER_REGISTRY}/onap/aai-resources
+    hostname: aai-resources.api.simpledemo.onap.org
     environment:
       - AAI_CHEF_ENV=simpledemo
       - AAI_CHEF_LOC=/var/chef/aai-data/environments
@@ -17,9 +17,9 @@ services:
       options:
         max-size: "30m"
         max-file: "5"
-  aai-traversal.api.simpledemo.openecomp.org:
-    image: ${DOCKER_REGISTRY}/openecomp/aai-traversal
-    hostname: aai-traversal.api.simpledemo.openecomp.org
+  aai-traversal.api.simpledemo.onap.org:
+    image: ${DOCKER_REGISTRY}/onap/aai-traversal
+    hostname: aai-traversal.api.simpledemo.onap.org
     environment:
       - AAI_CHEF_ENV=simpledemo
       - AAI_CHEF_LOC=/var/chef/aai-data/environments
@@ -35,14 +35,14 @@ services:
       options:
         max-size: "30m"
         max-file: "5"
-  aai.api.simpledemo.openecomp.org:
+  aai.api.simpledemo.onap.org:
     image: ${AAI_HAPROXY_IMAGE}:${HAPROXY_VERSION}
-    hostname: aai.api.simpledemo.openecomp.org
+    hostname: aai.api.simpledemo.onap.org
     ports:
       - 8443:8443
     links:
-      - aai-resources.api.simpledemo.openecomp.org
-      - aai-traversal.api.simpledemo.openecomp.org
+      - aai-resources.api.simpledemo.onap.org
+      - aai-traversal.api.simpledemo.onap.org
     volumes:
       - /dev/log:/dev/log
     logging:
@@ -50,9 +50,9 @@ services:
       options:
         max-size: "30m"
         max-file: "5"
-  aai.hbase.simpledemo.openecomp.org:
+  aai.hbase.simpledemo.onap.org:
     image: ${HBASE_IMAGE}:${HBASE_VERSION}
-    hostname: aai.hbase.simpledemo.openecomp.org
+    hostname: aai.hbase.simpledemo.onap.org
     ports:
       - 2181:2181
       - 8080:8080
