Change chef branch from master to amsterdam
Issue-ID: AAI-526
Change-Id: Ia012d891728a18ef7787992c8cb2c5c32cecd416
Signed-off-by: Venkata Harish K Kajur <vk250x@att.com>

--- a/test/csit/plans/aai/resources/docker-compose.yml
+++ b/test/csit/plans/aai/resources/docker-compose.yml
@@ -6,9 +6,9 @@ services:
     environment:
       - AAI_CHEF_ENV=simpledemo
       - AAI_CHEF_LOC=/var/chef/aai-data/environments
-      - CHEF_BRANCH=master
+      - CHEF_BRANCH=amsterdam
       - CHEF_GIT_URL=http://gerrit.onap.org/r/aai
-      - AAI_CORE_VERSION=1.1.0-SNAPSHOT
+      - AAI_CORE_VERSION=1.1.1-SNAPSHOT
       - LOCAL_USER_ID=${USER_ID}
     ports:
       - 8447:8447
@@ -23,9 +23,9 @@ services:
     environment:
       - AAI_CHEF_ENV=simpledemo
       - AAI_CHEF_LOC=/var/chef/aai-data/environments
-      - CHEF_BRANCH=master
+      - CHEF_BRANCH=amsterdam
       - CHEF_GIT_URL=http://gerrit.onap.org/r/aai
-      - AAI_CORE_VERSION=1.1.0-SNAPSHOT
+      - AAI_CORE_VERSION=1.1.1-SNAPSHOT
       - LOCAL_USER_ID=${USER_ID}
       - DISABLE_UPDATE_QUERY=true
     ports:
