Modify access rules

--- a/project.config
+++ b/project.config
@@ -2,5 +2,6 @@
 	inheritFrom = All-Projects
 [access "refs/*"]
 	owner = group ldap/onap-gerrit-integration-committer
+	read = group GitHub Replication
 [project]
 	description = Integration framework, automated tools, code and scripts, best practice guidance related to cross-project Continuous System Integration Testing (CSIT), and delivery of ONAP.
