--- a/test/ete/labs/huawei/onap-openstack-template.env
+++ b/test/ete/labs/huawei/onap-openstack-template.env
@@ -32,7 +32,7 @@ parameters:
 
   nexus_repo: https://nexus.onap.org/content/sites/raw
 
-  nexus_docker_repo: docker-proxy.neo.futurewei.com:5000
+  nexus_docker_repo: nexus3.onap.org:10001
 
   nexus_username: docker
 
