Reduce RAM footprint for xxlarge VMs in labs
Change-Id: Idd0466d1f480b5ddcdfff9fe6d550cdce4f9fbd5
Issue-ID: INT-278
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>

--- a/test/ete/labs/huawei/onap-openstack-template.env
+++ b/test/ete/labs/huawei/onap-openstack-template.env
@@ -22,7 +22,7 @@ parameters:
 
   flavor_xlarge: m1.xlarge
 
-  flavor_xxlarge: m1.xxlarge
+  flavor_xxlarge: m1.xlarge # purposely use a smaller VM here to reduce RAM usage
 
   vm_base_name: onap
 
