--- a/test/ete/labs/windriver/onap-openstack-template.env
+++ b/test/ete/labs/windriver/onap-openstack-template.env
@@ -22,7 +22,7 @@ parameters:
 
   flavor_xlarge: m1.xlarge
 
-  flavor_xxlarge: m1.xxlarge
+  flavor_xxlarge: m1.xlarge # purposely use a smaller VM here to reduce RAM usage
 
   vm_base_name: onap
 
