Use lab local docker proxies
Change-Id: Ifb7821d6173d16ccb59053edd9eb53632fe65933
Issue-ID: INT-278
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>
(cherry picked from commit f58cbcbc8603db69e1bac6b34d1d5aaf88470471)

--- a/test/ete/labs/gwu/onap-openstack-template.env
+++ b/test/ete/labs/gwu/onap-openstack-template.env
@@ -32,11 +32,11 @@ parameters:
 
   nexus_repo: https://nexus.onap.org/content/sites/raw
 
-  nexus_docker_repo: nexus3.onap.org:10001
+  nexus_docker_repo: stack.local.enacct.com:5000
 
-  nexus_username: docker
+  nexus_username: anonymous
 
-  nexus_password: docker
+  nexus_password: anonymous
 
   dmaap_topic: AUTO
 
