--- a/test/ete/labs/huawei/onap-openstack-template.env
+++ b/test/ete/labs/huawei/onap-openstack-template.env
@@ -34,9 +34,9 @@ parameters:
 
   nexus_docker_repo: docker-proxy.neo.futurewei.com:5000
 
-  nexus_username: docker
+  nexus_username: anonymous
 
-  nexus_password: docker
+  nexus_password: anonymous
 
   dmaap_topic: AUTO
 
