Fix lab docker proxy host
Change-Id: I4bd5b3173435afad26ea64c7ecf35c471115affb
Issue-ID: INT-278
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>

--- a/test/ete/labs/gwu/onap-openstack-template.env
+++ b/test/ete/labs/gwu/onap-openstack-template.env
@@ -32,7 +32,7 @@ parameters:
 
   nexus_repo: https://nexus.onap.org/content/sites/raw
 
-  nexus_docker_repo: stack.local.enacct.com:5000
+  nexus_docker_repo: docker-proxy.local.enacct.com:5000
 
   nexus_username: anonymous
 
