Use username/password in RC files to delete zones
Change-Id: Iea0dd80fa407e898f6e07b9131860c0c04bb5778
Issue-ID: INT-278
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>
(cherry picked from commit ab4e57206abec8d507f3ffa3a1d0bbb8aaf2ad5c)

--- a/test/ete/labs/gwu/onap-openstack-template.env
+++ b/test/ete/labs/gwu/onap-openstack-template.env
@@ -54,9 +54,9 @@ parameters:
 
   openstack_region: RegionOne
 
-  horizon_url: http://controller.neo.futurewei.com/horizon
+  horizon_url: http://stack.local.enacct.com/horizon
 
-  keystone_url: http://controller.neo.futurewei.com:5000
+  keystone_url: http://stack.local.enacct.com:5000
 
   cloud_env: RegionOne
 
