Fix Designate Keystone IP address for Huawei's lab
Change-Id: Ie616b1b4ccbf525ae6c47d2f82b33d263d0b485c
Issue-ID: INT-278
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>

--- a/test/ete/labs/huawei/onap-openstack-template.env
+++ b/test/ete/labs/huawei/onap-openstack-template.env
@@ -98,7 +98,7 @@ parameters:
 
   dnsaas_config_enabled: true
   dnsaas_region: RegionOne
-  dnsaas_keystone_url: http://10.12.25.5:5000/v3
+  dnsaas_keystone_url: http://controller.neo.futurewei.com:5000/v3
   dnsaas_tenant_name: ${OS_PROJECT_NAME}
   dnsaas_username: ${OS_USERNAME}
   dnsaas_password: ${OS_PASSWORD}
