--- a/test/ete/labs/gwu/onap-openstack-template.env
+++ b/test/ete/labs/gwu/onap-openstack-template.env
@@ -6,7 +6,7 @@ parameters:
   #                                            #
   ##############################################
 
-  public_net_id: 50e7638e-a9d2-4cd9-a242-2f289f8f6553
+  public_net_id: 024582bd-ef9b-48b9-9e70-e6732559d9df
 
   public_net_name: provider
 
@@ -32,7 +32,7 @@ parameters:
 
   nexus_repo: https://nexus.onap.org/content/sites/raw
 
-  nexus_docker_repo: docker-proxy.local.enacct.com:5000
+  nexus_docker_repo: force.local.enacct.com:5000
 
   nexus_username: anonymous
 
@@ -54,9 +54,9 @@ parameters:
 
   openstack_region: RegionOne
 
-  horizon_url: http://stack.local.enacct.com/horizon
+  horizon_url: http://controller.local.enacct.com/horizon
 
-  keystone_url: http://stack.local.enacct.com:5000
+  keystone_url: http://controller.local.enacct.com:5000
 
   cloud_env: RegionOne
 
