--- a/test/ete/labs/huawei/onap-oom.env
+++ b/test/ete/labs/huawei/onap-oom.env
@@ -7,8 +7,13 @@ parameters:
   ##############################################
 
   public_net_id: 3a6247f1-fac6-4167-a49f-33cc8415ccf4
-
   docker_proxy: 10.145.122.118:5000
-
   apt_proxy: 10.145.122.118:3142
-
+  dns_list: ["10.145.122.117", "10.145.122.118"]
+  oam_network_cidr: 172.16.0.0/16
+  ubuntu_1404_image: trusty
+  openstack_tenant_id: 3d228d2fcbb7447bbba3cde703431bc1
+  openstack_tenant_name: onap-ci-amsterdam-heat
+  openstack_username: demo
+  openstack_api_key: demo
+  keystone_url: http://10.145.122.117:5000
