Enable DCAE in ONAP OOM heat template
Change-Id: Ie9ddb0975f6a71241081c7b48d5a88c24798903f
Issue-ID: INT-381
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>

--- a/test/ete/labs/huawei/onap-oom.env
+++ b/test/ete/labs/huawei/onap-oom.env
@@ -17,3 +17,5 @@ parameters:
   openstack_username: demo
   openstack_api_key: demo
   keystone_url: http://10.145.122.117:5000
+  rancher_vm_flavor: m1.small
+  k8s_vm_flavor: m1.xxlarge
