--- a/test/ete/labs/huawei/onap-oom.yaml
+++ b/test/ete/labs/huawei/onap-oom.yaml
@@ -12,6 +12,10 @@ parameters:
     type: string
     description: The ID of the Public network for floating IP address allocation
 
+  public_net_name:
+    type: string
+    description: The name of the Public network referred by public_net_id
+
   dns_list:
     type: comma_delimited_list
     description: List of External DNS for OAM ONAP network
@@ -44,52 +48,42 @@ parameters:
     type: string
     description: Name of the Ubuntu 14.04 image
 
+  ubuntu_1604_image:
+    type: string
+    description: Name of the Ubuntu 16.04 image
+
+  centos_7_image:
+    type: string
+    description: the id/name of the CentOS 7 VM imange
+
+  rancher_vm_flavor:
+    type: string
+    description: Name of the Ubuntu 14.04 image
+
+  k8s_vm_flavor:
+    type: string
+    description: Name of the Ubuntu 14.04 image
+
+  dcae_ip_addr:
+    type: string
+
+  dns_forwarder:
+    type: string
+    description: the forwarder address for setting up ONAP's private DNS server
+
+
 resources:
   random-str:
     type: OS::Heat::RandomString
     properties:
       length: 4
 
-  # ONAP management private network
-  oam_network:
-    type: OS::Neutron::Net
-    properties:
-      name:
-        str_replace:
-          template: "oam_network_RAND"
-          params:
-            RAND: { get_resource: random-str }
-
-  oam_subnet:
-    type: OS::Neutron::Subnet
-    properties:
-      name:
-        str_replace:
-          template: "oam_subnet_RAND"
-          params:
-            RAND: { get_resource: random-str }
-      network_id: { get_resource: oam_network }
-      cidr: { get_param: oam_network_cidr }
-      dns_nameservers: { get_param: dns_list }
-
-  router:
-    type: OS::Neutron::Router
-    properties:
-      external_gateway_info:
-        network: { get_param: public_net_id }
-
-  router_interface:
-    type: OS::Neutron::RouterInterface
-    properties:
-      router_id: { get_resource: router }
-      subnet_id: { get_resource: oam_subnet }
-
   rancher_vm:
     type: OS::Nova::Server
     properties:
       name: rancher
       image: xenial
-      flavor: m1.medium
+      flavor: { get_param: rancher_vm_flavor }
       key_name: onap_key
       networks:
       - network: { get_param: public_net_id }
@@ -107,7 +101,7 @@ resources:
     properties:
       name: k8s
       image: xenial
-      flavor: m1.xxlarge
+      flavor: { get_param: k8s_vm_flavor }
       key_name: onap_key
       networks:
       - network: { get_param: public_net_id }
@@ -123,10 +117,14 @@ resources:
             __openstack_username__: { get_param: openstack_username }
             __openstack_api_key__: { get_param : openstack_api_key }
             __public_net_id__: { get_param: public_net_id }
-            __oam_network_id__: { get_resource: oam_network }
-            __oam_subnet_id__: { get_resource: oam_subnet }
+            __public_net_name__: { get_param: public_net_name }
             __oam_network_cidr__: { get_param: oam_network_cidr }
             __ubuntu_1404_image__: { get_param: ubuntu_1404_image }
+            __ubuntu_1604_image__: { get_param: ubuntu_1604_image }
+            __centos_7_image__: { get_param: centos_7_image }
             __keystone_url__: { get_param: keystone_url }
+            __dcae_ip_addr__: { get_param: dcae_ip_addr }
+            __dns_list__: { get_param: [dns_list, 0] }
+            __dns_forwarder__: { get_param: dns_forwarder }
           template:
             get_file: k8s_vm_entrypoint.sh
