--- a/deployment/heat/onap-oom/env/gwu/onap.env
+++ b/deployment/heat/onap-oom/env/gwu/onap.env
@@ -19,7 +19,15 @@ parameters:
   public_net_id: 024582bd-ef9b-48b9-9e70-e6732559d9df
   public_net_name: provider
 
+  dcae_keystone_url: http://192.168.1.11:5000/v2.0
   oam_network_cidr: 172.16.0.0/16
   dcae_ip_addr: 172.16.0.4
-  dns_list: ["192.168.1.11", "192.168.1.3"]
   dns_forwarder: 192.168.1.11
+  external_dns: 192.168.1.3
+
+  dnsaas_proxy_enable: false
+  dnsaas_keystone_url: http://192.168.1.11:5000/v2.0
+  dnsaas_region: RegionOne
+  dnsaas_tenant_name: onap
+  dnsaas_username: demo
+  dnsaas_password: demo
