Use ubuntu 16.04 image name parameter
Change-Id: I87655d6d22e4a34c49e065c587890123a9013f65
Issue-ID: INT-381
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>

--- a/deployment/heat/onap-oom/onap-oom.yaml
+++ b/deployment/heat/onap-oom/onap-oom.yaml
@@ -109,7 +109,7 @@ resources:
     type: OS::Nova::Server
     properties:
       name: rancher
-      image: xenial
+      image: { get_param: ubuntu_1604_image }
       flavor: { get_param: rancher_vm_flavor }
       key_name: onap_key
       networks:
@@ -127,7 +127,7 @@ resources:
     type: OS::Nova::Server
     properties:
       name: k8s
-      image: xenial
+      image: { get_param: ubuntu_1604_image }
       flavor: { get_param: k8s_vm_flavor }
       key_name: onap_key
       networks:
