Update AAI instructions
The AAI instructions were using old variables resulting in some
execution errors. This change removes that old variables and
updates the methods required for the service.

Change-Id: I14f8e598eb8a5fd915b63135c1145ea25f6bcad0
Signed-off-by: Victor Morales <victor.morales@intel.com>
Issue-ID: INT-18

--- a/bootstrap/vagrant-onap/Vagrantfile
+++ b/bootstrap/vagrant-onap/Vagrantfile
@@ -45,9 +45,13 @@ nodes = [
     :macs   => [],
     :cpus   => 2,
     :cpu    => "50",
-    :ram    => 4 * 1024,
+    :ram    => 6 * 1024,
     :groups => ["individual"],
-    :args   => ["aai"]
+    :args   => ["aai"],
+    :fwds   => [
+      { :guest => 8446, :host => 8446, :guest_ip => '192.168.50.6' },
+      { :guest => 9446, :host => 9446, :guest_ip => '192.168.50.6' },
+    ]
   },
   {
     :name   => "all-in-one",
