Add output of rancher instance IP
Change-Id: Ia0ec05870b03e80a251c81cb294497c33604199d
Issue-ID: INT-381
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>

--- a/deployment/heat/onap-oom/onap-oom.yaml
+++ b/deployment/heat/onap-oom/onap-oom.yaml
@@ -164,6 +164,10 @@ resources:
             get_file: k8s_vm_entrypoint.sh
 
 outputs:
+  rancher_vm_ip:
+    description: The IP address of the rancher instance
+    value: { get_attr: [rancher_vm, first_address] }
+
   k8s_vm_ip:
     description: The IP address of the k8s instance
     value: { get_attr: [k8s_vm, first_address] }
